index.html file updated.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <title>Welcome to SampleWebSite</title>
     <body>
         <h1>Welcome to SampleWebSite</h1>
-        <p>This is SampleWebSite.</p>
+        <p>This is SampleWebSite. This website is under maintainance mode. Once the website is come back, We will update here.</p>
     </body>
 </html>
