--- a/about.html
+++ b/about.html
@@ -2,6 +2,6 @@
     <title>Welcome to About</title>
     <body>
         <h1>About</h1>
-        <p>We will be teach IT Skills. The Skills are Git, Jenkins, Ansible, Linux and so on.</p>
+        <p>We will be teach IT Skills. The Skills are Git, Jenkins, Ansible, Kubentures, Linux and so on.</p>
     </body>
 </html>
