--- a/home.html
+++ b/home.html
@@ -2,6 +2,6 @@
     <title>Welcome to home</title>
     <body>
         <h1>Welcome to home</h1>
-        <p>This is SampleWebSite.</p>
+        <p>This is SampleWebSite. We have the products list.</p>
     </body>
 </html>
