--- a/products.html
+++ b/products.html
@@ -2,6 +2,6 @@
     <title>Welcome to Product</title>
     <body>
         <h1>Product</h1>
-        <p>We will be the product list.</p>
+        <p>We will be update the product list.</p>
     </body>
 </html>
